fixing responsive on mobile

--- a/src/output.css
+++ b/src/output.css
@@ -7,10 +7,14 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-blue-950: oklch(28.2% 0.091 267.935);
+    --color-red-600: oklch(57.7% 0.245 27.325);
     --color-gray-50: oklch(98.5% 0.002 247.839);
     --color-white: #fff;
     --spacing: 0.25rem;
+    --text-sm: 0.875rem;
+    --text-sm--line-height: calc(1.25 / 0.875);
+    --text-xl: 1.25rem;
+    --text-xl--line-height: calc(1.75 / 1.25);
     --text-2xl: 1.5rem;
     --text-2xl--line-height: calc(2 / 1.5);
     --text-5xl: 3rem;
@@ -200,6 +204,9 @@
   .left-270 {
     left: calc(var(--spacing) * 270);
   }
+  .mx-auto {
+    margin-inline: auto;
+  }
   .mt-40 {
     margin-top: calc(var(--spacing) * 40);
   }
@@ -230,6 +237,9 @@
   .h-\[2985\.44px\] {
     height: 2985.44px;
   }
+  .h-auto {
+    height: auto;
+  }
   .w-\[208px\] {
     width: 208px;
   }
@@ -245,6 +255,24 @@
   .w-\[1514px\] {
     width: 1514px;
   }
+  .w-full {
+    width: 100%;
+  }
+  .max-w-\[1\] {
+    max-width: 1;
+  }
+  .max-w-\[46\] {
+    max-width: 46;
+  }
+  .max-w-\[468p\] {
+    max-width: 468p;
+  }
+  .max-w-\[468px\] {
+    max-width: 468px;
+  }
+  .max-w-\[1514px\] {
+    max-width: 1514px;
+  }
   .border-collapse {
     border-collapse: collapse;
   }
@@ -256,6 +284,12 @@
   }
   .items-end {
     align-items: flex-end;
+  }
+  .gap-8 {
+    gap: calc(var(--spacing) * 8);
+  }
+  .gap-20 {
+    gap: calc(var(--spacing) * 20);
   }
   .gap-120 {
     gap: calc(var(--spacing) * 120);
@@ -289,6 +323,9 @@
     --tw-font-weight: var(--font-weight-medium);
     font-weight: var(--font-weight-medium);
   }
+  .text-red-600 {
+    color: var(--color-red-600);
+  }
   .text-white {
     color: var(--color-white);
   }
@@ -299,9 +336,37 @@
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
   }
-  .md\:flex-col {
+  .sm\:text-sm {
+    @media (width >= 40rem) {
+      font-size: var(--text-sm);
+      line-height: var(--tw-leading, var(--text-sm--line-height));
+    }
+  }
+  .md\:text-sm {
     @media (width >= 48rem) {
-      flex-direction: column;
+      font-size: var(--text-sm);
+      line-height: var(--tw-leading, var(--text-sm--line-height));
+    }
+  }
+  .md\:text-xl {
+    @media (width >= 48rem) {
+      font-size: var(--text-xl);
+      line-height: var(--tw-leading, var(--text-xl--line-height));
+    }
+  }
+  .lg\:flex {
+    @media (width >= 64rem) {
+      display: flex;
+    }
+  }
+  .lg\:flex-row {
+    @media (width >= 64rem) {
+      flex-direction: row;
+    }
+  }
+  .lg\:gap-120 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 120);
     }
   }
 }
